Fix issue when deleting items with the context menu

Thanks to Jekyll Wu for the analyses of the issue!

BUG: 290307
BUG: 269096
BUG: 290954
BUG: 264583
FIXED-IN: 4.8.0